--- a/first/index.html
+++ b/first/index.html
@@ -1,1 +1,17 @@
 <!-- Put your HTML HERE, make sure to connect your index.css sheet -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>TJ Day 4 Assignment 1</title>
+    <link rel="stylesheet" href="index.css"> 
+</head>
+<header class="header"></header>
+<body>
+    <!-- <header class="header">This is my header</header> -->
+    <p class="main-content"></p>
+</body>
+<footer class="footer"></footer>
+</html>
