Gray Square and Blue Box Done

--- a/third/index.html
+++ b/third/index.html
@@ -1,1 +1,31 @@
 <!-- Put your HTML HERE, make sure to connect your index.css sheet -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>TJ Problem 3</title>
+    <link rel="stylesheet" href="index.css">
+</head>
+<body>
+    <div class="gray">
+
+        <div class="blue-square"></div>
+
+    </div>
+
+    
+    
+    <div class="white-stripe"></div>
+
+    <div class="blue-stripe"></div>
+
+    <div class="medium-green-stripe"></div>
+
+    <div class="lime-green-stripe"></div>
+
+    <div class="yellow-stripe"></div>
+
+</body>
+</html>
