--- a/third/index.html
+++ b/third/index.html
@@ -17,12 +17,12 @@
         
     
     <div class="white-stripe">
-        <p>Consider hiding the status bar-and all other app UI-while people are actively viewing full screen media. If you hide the status bar, be sure to let people retrieve it (and the appropriate app UI) with a single tap. Unless you have a com0elling reason to do so, avoid defining a customer gesture to redisplay the status bar because users are unlikely to discover such a gesture or remember it.</p>
+        <p>Consider hiding the status bar-and all other app UI-while people are actively viewing full screen media. If you hide the status bar, be sure to let people retrieve it (and the appropriate app UI) with a single tap. Unless you have a compelling reason to do so, avoid defining a custom gesture to redisplay the status bar because users are unlikely to discover such a gesture or remember it.</p>
     </div>
 
     <div class="blue-stripe"></div>
 
-    <div class="medium-green-stripe"></div>
+    <div class="green-stripe"></div>
 
     <div class="lime-green-stripe"></div>
 
